Form validation and send for whatsapp

--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
         </ul>
     </section>
     <footer>Designer by José Dias</footer>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
